src/components/HeroSection/HeroSection.module.scss
.container {
  background-image: radial-gradient(#531116, #181c27);
  background-repeat: no-repeat;
  background-position: 50% 0%;
  background-size: cover;
  padding: 7rem 0.5rem;
  filter: blur(16px);
  transition: 1s;

  &::after {
    content: '';
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 2rem;
    margin-left: -1rem;
    background: linear-gradient(rgba(0, 0, 0, 0), rgba(23, 24, 27, 1));
  }

  &[data-loaded='true'] {
    filter: blur(0);
  }
}

.wrap {
  max-width: 1200px;
  margin: auto;
}

.descriptor {
  max-width: 576px;

  & > h1 {
    font-size: 5rem;
    margin-top: 0;
  }

  & > p {
    color: lightgray;
  }
}

.ratingsRow {
  display: flex;
}

